remove unneeded style and js files

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_GOOGLE_MAPS_KEY=AIzaSyCsOYvglu2KQN0XGTFPwG79v8BSdJ_eCFA;
+REACT_APP_GOOGLE_MAPS_KEY=AIzaSyCsOYvglu2KQN0XGTFPwG79v8BSdJ_eCFA
 key = 'AIzaSyCsOYvglu2KQN0XGTFPwG79v8BSdJ_eCFA&v=3'
